force-app/main/default/objects/WhatsApp_Provider_Setting__mdt/WhatsApp_Provider_Setting__mdt.object-meta.xml
<CustomObject>
    <label>WhatsApp Provider Setting</label>
    <pluralLabel>WhatsApp Provider Settings</pluralLabel>
</CustomObject>