force-app/main/default/objects/WhatsApp_Provider_Setting__mdt/fields/Meta_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Meta_Access_Token__c</fullName>
    <label>Meta Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>