force-app/main/default/objects/WhatsApp_Provider_Setting__mdt/fields/Meta_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_App_ID__c</fullName>
    <label>Meta App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>