force-app/main/default/objects/WhatsApp_Provider_Setting__mdt/fields/Phone_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_ID__c</fullName>
    <label>Phone Number ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>