force-app/main/default/objects/WhatsApp_Provider_Setting__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Twilio</fullName>
                <default>true</default>
                <label>Twilio</label>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>