force-app/main/default/objects/WhatsApp_Provider_Setting__mdt/fields/Twilio_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Auth_Token__c</fullName>
    <label>Twilio Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>